adding the backend routes doc and logout route
